k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: car-store-api
spec:
  selector:
    app: car-store-api
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
